--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "autocompelte for slated",
   "main": "server.js",
   "dependencies": {
-    "express": "~4.7.2",
-    "mongoose": "~4.1.0",
-    "morgan": "~1.2.2",
+    "angular": "^1.5.7",
     "body-parser": "~1.5.2",
+    "express": "~4.7.2",
+    "jquery": "^3.0.0",
     "jsonwebtoken": "^5.0.2",
-    "method-override": "~2.1.2"
+    "method-override": "~2.1.2",
+    "mongoose": "~4.1.0",
+    "morgan": "~1.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
